--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 }
 
 .redColor {
+    color: white;
     background-color: rgb(255, 19, 19);
     padding: 10px;
     border-radius: 10%;
@@ -22,4 +23,5 @@
 
 #forecast {
     font-size: small;
+    text-align: justify;
 }
